@@ -8,6 +8,7 @@ import sys
 import os
 import argparse
 import logging
+import appdirs
 
 # umask to 0 so that all files created under sudo, can be re-written under regular user.
 os.umask(0)
@@ -329,7 +330,12 @@ def main():
                     "__COMMAND_NAMES__": command_names,
                     "__CURRENT_OS__": os_family_name,
                     "__CURRENT_OS_SECOND_NAME__": os_second_name,
-                    "__CURRENT_OS_NAMES__": current_os_names}
+                    "__CURRENT_OS_NAMES__": current_os_names,
+                    "__SITE_DATA_DIR__": appdirs.site_data_dir(),
+                    "__SITE_CONFIG_DIR__": appdirs.site_config_dir(),
+                    "__USER_DATA_DIR__": appdirs.user_data_dir(),
+                    "__USER_CONFIG_DIR__": appdirs.user_config_dir()
+                    }
     if os_family_name != "Win":
         initial_vars.update(
                     {"__USRER_ID__": str(os.getuid()),
